--- a/site-rhizom/frontend/src/tailwind.css
+++ b/site-rhizom/frontend/src/tailwind.css
@@ -1,24 +1,72 @@
+/* Display - Regular */
 @font-face {
-  font-family: 'Halogen';
-  font-weight: 100;
-  font-style: normal;
-  font-display: swap;
-  src: url('./assets/fonts/Halogen-Thin.woff2') format('woff2');
-}
-@font-face {
-  font-family: 'Halogen';
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-  src: url('./assets/fonts/Halogen-Light.woff2') format('woff2');
-}
-@font-face {
-  font-family: 'Halogen';
+  font-family: "BBPoppinsTN";
+  src: url("@/assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayRegular.woff2")
+      format("woff2"),
+    url("@/assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayRegular.woff")
+      format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  src: url('./assets/fonts/Halogen-Regular.woff2') format('woff2');
 }
+
+/* Display - Bold */
+@font-face {
+  font-family: "BBPoppinsTN";
+  src: url("@/assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayBold.woff2")
+      format("woff2"),
+    url("@/assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayBold.woff")
+      format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Display - SemiBold */
+@font-face {
+  font-family: "BBPoppinsTN";
+  src: url("@/assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplaySemiBold.woff2")
+      format("woff2"),
+    url("@/assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplaySemiBold.woff")
+      format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Display - Black */
+@font-face {
+  font-family: "BBPoppinsTN";
+  src: url("@/assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayBlack.woff2")
+      format("woff2"),
+    url("@/assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayBlack.woff")
+      format("woff");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Display - Italic */
+@font-face {
+  font-family: "BBPoppinsTN";
+  src: url("@/assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayRegularItalic.woff2")
+      format("woff2"),
+    url("@/assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayRegularItalic.woff")
+      format("woff");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Halogen';
+  src: url('@/assets/fonts/Halogen/Halogen-Regular.woff2') format('woff2'),
+       url('@/assets/fonts/Halogen/Halogen-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -26,3 +74,9 @@
 /* body {
   outline: 5px solid red !important;
 } */
+
+*,
+*::before,
+*::after {
+  cursor: none !important;
+}
