--- a/site-rhizom/frontend/src/tailwind.css
+++ b/site-rhizom/frontend/src/tailwind.css
@@ -74,9 +74,9 @@
 
 @font-face {
   font-family: "BBPoppinsTN";
-  src: url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayRegular.woff2")
+  src: url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-TextRegular.woff2")
       format("woff2"),
-    url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayRegular.woff")
+    url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-TextRegular.woff")
       format("woff");
   font-weight: 400;
   font-style: normal;
@@ -86,10 +86,9 @@
 /* Display - Bold */
 @font-face {
   font-family: "BBPoppinsTN";
-  src: url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayBold.woff2")
+  src: url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-TextBold.woff2")
       format("woff2"),
-    url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayBold.woff")
-      format("woff");
+    url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-TextBold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -98,9 +97,9 @@
 /* Display - SemiBold */
 @font-face {
   font-family: "BBPoppinsTN";
-  src: url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplaySemiBold.woff2")
+  src: url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-TextSemiBold.woff2")
       format("woff2"),
-    url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplaySemiBold.woff")
+    url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-TextSemiBold.woff")
       format("woff");
   font-weight: 600;
   font-style: normal;
@@ -110,10 +109,9 @@
 /* Display - Black */
 @font-face {
   font-family: "BBPoppinsTN";
-  src: url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayBlack.woff2")
+  src: url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-TextBlack.woff2")
       format("woff2"),
-    url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-DisplayBlack.woff")
-      format("woff");
+    url("./assets/fonts/BBPopinsTN/BBBPoppinsTN-TextBlack.woff") format("woff");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
