--- a/site-rhizom/frontend/src/tailwind.css
+++ b/site-rhizom/frontend/src/tailwind.css
@@ -144,14 +144,9 @@ body {
 }
 
 @layer base {
-  /* Empêche le scroll pendant la splash vidéo */
   html,
-  body {
-    overflow: hidden;
-  }
-
-  /* Quand la splash est terminée, on rend à nouveau le scroll */
-  body.splash-ended {
-    overflow: auto;
+  body,
+  #app {
+    height: 100%;
   }
 }
